--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ APP_SECRET=6d8d2ac43e356ab9bfa3f3a67ee8fe4f
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://saku:salainen@127.0.0.1:3306/aloitelaatikko
+###< doctrine/doctrine-bundle ###
